fix(storage): not showing file description; Manage access not connected;

--- a/client/projects/cms/src/app/modules/dashboard/modules/storage/components/storage/storage.component.scss
+++ b/client/projects/cms/src/app/modules/dashboard/modules/storage/components/storage/storage.component.scss
@@ -136,3 +136,9 @@
     width: 100%;
   }
 }
+
+.folder-description {
+  padding: 0 16px;
+  margin-top: 20px;
+  color: var(--panel-primary);
+}
